--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <!-- Basic Page Needs -->
       <meta charset="utf-8">
-      <title> Most Dominant Pitches of the 2020 MLB Season </title>
+      <title> Most Dominants Pitches of the 2020 MLB Season </title>
       <meta name="description" content=" ">
       <meta name="author" content=" ">
       <!-- Mobile Specific Metas -->
