--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
    <head>
       <!-- Basic Page Needs -->
       <meta charset="utf-8">
-      <title> Most Dominants Pitches of the 2020 MLB Season </title>
+      <meta name="description" content="Best Pitches of 2020 MLB Season">
+      <meta name="author" content="Austin Kalt">
+      <title> Most Dominant Pitches of the 2020 MLB Season </title>
       <meta name="description" content=" ">
       <meta name="author" content=" ">
       <!-- Mobile Specific Metas -->
@@ -61,7 +63,8 @@
       </p>
    </div>
    <div class="col-sm-5">
-      <div id="devin_graph"><iframe title="Devin Williams' Changeup (61 ABs)" aria-label="chart" id="datawrapper-chart-K2sPc" src="https://datawrapper.dwcdn.net/K2sPc/4/" scrolling="no" frameborder="0" style="border: none;" width="600" height="208"></iframe>
+      <div id="devin_graph"><iframe title="Devin Williams' Changeup (61 ABs)" aria-label="chart" id="datawrapper-chart-K2sPc" src="https://datawrapper.dwcdn.net/K2sPc/4/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="208"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
+</script>
          <img src="images/devin.gif" id="devin_gif" alt="GIF of Devin Williams' Changeup">
       </div>
       <div id="devin_caption">
@@ -92,7 +95,8 @@
       </p>
    </div>
    <div class="col-sm-5">
-      <div id="tyler_graph"> <iframe title="Tyler Glasnow's Curveball (83 ABs)" aria-label="chart" id="datawrapper-chart-TZaej" src="https://datawrapper.dwcdn.net/TZaej/2/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
+      <div id="tyler_graph"> <iframe title="Tyler Glasnow's Curveball (83 ABs)" aria-label="chart" id="datawrapper-chart-TZaej" src="https://datawrapper.dwcdn.net/TZaej/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
+</script>
          <img src="images/tyler.gif" id="tyler_gif" alt="GIF of Tyler Glasnow's Curveball">
       </div>
       <div id="tyler_caption">
@@ -123,7 +127,8 @@
       </p>
    </div>
    <div class="col-sm-5">
-      <div id="shane_graph"> <iframe title="Shane Bieber's Curveball (84 ABs)" aria-label="chart" id="datawrapper-chart-lWfCH" src="https://datawrapper.dwcdn.net/lWfCH/2/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
+      <div id="shane_graph"> <iframe title="Shane Bieber's Curveball (84 ABs)" aria-label="chart" id="datawrapper-chart-lWfCH" src="https://datawrapper.dwcdn.net/lWfCH/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
+</script>
          <img src="images/shane.gif" id="shane_gif" alt="GIF of Shane Bieber's Curveball">
       </div>
       <div id="shane_caption">
@@ -154,7 +159,8 @@
       </p>
    </div>
    <div class="col-sm-5">
-      <div id="framber_graph"> <iframe title="Framber Valdez' Curveball (105 AB's)" aria-label="chart" id="datawrapper-chart-1Y04L" src="https://datawrapper.dwcdn.net/1Y04L/3/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
+      <div id="framber_graph"> <iframe title="Framber Valdez' Curveball (105 AB's)" aria-label="chart" id="datawrapper-chart-1Y04L" src="https://datawrapper.dwcdn.net/1Y04L/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
+</script>
          <img src="images/framber.gif" id="framber_gif" alt="GIF of Framber Valdez' Curveball">
       </div>
       <div id="framber_caption">
@@ -185,7 +191,8 @@
       </p>
    </div>
    <div class="col-sm-5">
-      <div id="trevor_graph"> <iframe title="Trevor Bauer's Fastball (100 ABs)" aria-label="chart" id="datawrapper-chart-lOkQF" src="https://datawrapper.dwcdn.net/lOkQF/3/" scrolling="no" frameborder="0" style="border: none;" width="600" height="400"></iframe>
+      <div id="trevor_graph"> <iframe title="Trevor Bauer's Fastball (100 ABs)" aria-label="chart" id="datawrapper-chart-lOkQF" src="https://datawrapper.dwcdn.net/lOkQF/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}}))}();
+</script>
          <img src="images/trevor.gif" id="trevor_gif" alt="GIF of Trevor Bauer's Fastball">
       </div>
       <div id="trevor_caption">
