--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
       <meta name="description" content="Best Pitches of 2020 MLB Season">
       <meta name="author" content="Austin Kalt">
       <title> Most Dominant Pitches of the 2020 MLB Season </title>
-      <meta name="description" content=" ">
-      <meta name="author" content=" ">
       <!-- Mobile Specific Metas -->
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- FONT -->
@@ -29,6 +27,7 @@
       </div>
       <div class="col-sm-2"></div>
    </div>
+</div>
    <div class="container_fluid_2">
    <div class="row">
       <div class="col-sm-2"></div>
@@ -39,8 +38,10 @@
             There are a combination of things that makes hitting an MLB pitcher so tough. The mixture of velocity, movement and pitch sequencing, often leaves hitters guessing when they're at the plate. Here's a look at five of the most dominant pitchers and a focus on their most effective pitch that caused issues for opposing batters all season long.  
          </p>
       </div>
-      <div class="col-sm-2"></div>
    </div>
+</div>
+      <div class="col-sm-2">
+      </div>
    <div class="container_fluid_3">
    <div class="row">
       <div class="col-sm-2">
@@ -53,6 +54,7 @@
       </div>
       <div class="col-sm-2"></div>
    </div>
+</div>
    <br>
    <div class="container_fluid_4">
    <div class="row">
@@ -73,6 +75,8 @@
          </div>
       </div>
    </div>
+</div>
+</div>
    <div class="container_fluid_5">
    <div class="row">
       <div class="col-sm-2">
@@ -85,6 +89,8 @@
       </div>
       <div class="col-sm-2"></div>
    </div>
+</div>
+</div>
    <br>
    <div class="container_fluid_6">
    <div class="row">
@@ -117,8 +123,10 @@
       </div>
       <div class="col-sm-2"></div>
    </div>
+
    <br>
    <div class="container_fluid_8">
+   </div>
    <div class="row">
    <div class="col-sm-1">
    </div>
@@ -137,6 +145,8 @@
          </div>
       </div>
    </div>
+</div>
+</div>
    <div class="container_fluid_9">
    <div class="row">
       <div class="col-sm-2">
